	example, if we try to call accessible regions from a subset of
	cells in scATAC-seq dataset, we can use `--barcodes
	celltype1_barcodes.txt --max-count 2` where the
	`celltype1_barcodes.txt` contains the barcodes of the cells
	assigned to celltype1 (each row is an unique barcode), and we
	assume that any genomics position of a single cell can only be cut
	twice (in case of haplotype).

2025-02-19  Tao Liu  <vladimir.liu@gmail.com>
	MACS 3.0.3

	* Features added

	1) Now support FRAG format for single-cell ATAC-seq in `callpeak`
	and `pileup`. FRAG format is used by 10x Genomics to store
	alignments from the single-cell ATAC-seq pipeline
	`cellranger-atac` or the multiomics pipeline `cellranger-arc`. The
	format is essentially BEDPE with two additional columns: the
	barcode and the count of fragments aligned to the same location
	with the same barcode. Support for FRAG in other tools is coming
	soon, as well as for `hmmratac` calls.

	If you specify `-f FRAG` as your input format:

        - You can use a barcode list for a subset of cells with
	`--barcodes`, then `callpeak` will identify peaks and `pileup`
	will build pileup track for the fragments of this subset of cells.

	- Duplicates will not get removed as we'll assume all fragments
	are valid. Optionally, an option, `--max-count`, can be applied to
	set the maximum count.

	2) We transitioned our `pyx` codes to `py` codes, adopting a 'pure
	Python style' with PEP-484 type annotations. This change has made
	oursource codes more compatible with Python programming tools such
	as `flake8`. During this process, we performed further code
	cleaning and eliminated unnecessary dependencies. We intend to
	continue improving our code quality in the future.

	3) We have modified the handling of 'blacklist' regions in the
	`hmmratac` tool. This change impacts both the
	Expectation-Maximization (EM) step that estimates fragment length
	distributions, and the Hidden Markov Model (HMM) step that learns