@@ -1,50 +1,0 @@
-{% set name = "macs3" %}
-{% set version = "3.0.2" %}
-
-package:
-  name: "{{ name|lower }}"
-  version: "{{ version }}"
-
-source:
-  path: ../../
-
-build:
-  number: 0
-  skip: True  # [py2k]
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv "
-
-requirements:
-  build:
-    - {{ compiler('c') }}
-    - zlib
-    - python >=3.11
-    - numpy >=1.25
-    - scipy >=1.12
-    - Cython ~=3.0
-    - cykhash >=2.0,<3.0
-    - setuptools >=68.0
-    - hmmlearn >=0.3.2
-    - scikit-learn >=1.3
-  host:
-    - python >=3.11
-    - zlib
-    - numpy >=1.25
-    - scipy >=1.12
-    - Cython ~=3.0
-    - hmmlearn >=0.3.2
-    - scikit-learn >=1.3
-    - cykhash >=2.0,<3.0
-  run:
-    - python >=3.11
-    - numpy >=1.25
-    - scipy >=1.12
-    - hmmlearn >=0.3.2
-    - scikit-learn >=1.3
-    - cykhash >=2.0,<3.0
-
-about:
-  home: http://github.com/macs3-project/MACS/
-  license: BSD
-  license_family: BSD
-  license_file: LICENSE
-  summary: Model Based Analysis for ChIP-Seq data
